Fixed logging configuration, and added feed_reader.py which intends to replcae monitor.py with a Daemon. Also updated feed_utils to have a Feed object.

--- a/tracker/logging.conf
+++ b/tracker/logging.conf
@@ -1,9 +1,9 @@
 # -*- coding: utf-8 -*-
 [loggers]
-keys=root,simpleExample,monitor
+keys=root,simpleExample,feedReader,articleDownloader
 
 [handlers]
-keys=consoleHandler,monitorHandler
+keys=consoleHandler,feedReaderHandler,articleDownloaderHandler
 
 [formatters]
 keys=simpleFormatter
@@ -18,10 +18,15 @@ handlers=consoleHandler
 qualname=simpleExample
 propagate=0
 
-[logger_monitor]
+[logger_feedReader]
 level=DEBUG
-handlers=monitorHandler
-qualname=monitor
+handlers=feedReaderHandler
+qualname=feedReader
+
+[logger_articleDownloader]
+level=DEBUG
+handlers=feedReaderHandler
+qualname=feedReader
 
 [handler_consoleHandler]
 class=StreamHandler
@@ -29,11 +34,17 @@ level=DEBUG
 formatter=simpleFormatter
 args=(sys.stdout,)
 
-[handler_monitorHandler]
+[handler_articleDownloaderHandler]
 class=handlers.TimedRotatingFileHandler
 level=DEBUG
 formatter=simpleFormatter
-args=("monitor.log","D",1)
+args=("article_downloader.log","D",1)
+
+[handler_feedReaderHandler]
+class=handlers.TimedRotatingFileHandler
+level=DEBUG
+formatter=simpleFormatter
+args=("feed_reader.log","D",1)
 
 [formatter_simpleFormatter]
 format=%(asctime)s %(name)-12s %(levelname)-8s %(message)s
