--- a/tracker/logging.conf
+++ b/tracker/logging.conf
@@ -1,9 +1,9 @@
 # -*- coding: utf-8 -*-
 [loggers]
-keys=root,simpleExample,feedReader,articleDownloader
+keys=root,simpleExample,feedReader,articleDownloader,pipeline
 
 [handlers]
-keys=consoleHandler,feedReaderHandler,articleDownloaderHandler
+keys=consoleHandler,feedReaderHandler,articleDownloaderHandler,pipelineHandler
 
 [formatters]
 keys=simpleFormatter
@@ -28,6 +28,11 @@ level=DEBUG
 handlers=articleDownloaderHandler
 qualname=articleDownloader
 
+[logger_pipeline]
+level=DEBUG
+handlers=pipelineHandler
+qualname=pipeline
+
 [handler_consoleHandler]
 class=StreamHandler
 level=DEBUG
@@ -45,6 +50,12 @@ class=handlers.TimedRotatingFileHandler
 level=DEBUG
 formatter=simpleFormatter
 args=("feed_reader.log","D",1)
+
+[handler_pipelineHandler]
+class=handlers.TimedRotatingFileHandler
+level=DEBUG
+formatter=simpleFormatter
+args=("pipeline.log","D",1)
 
 [formatter_simpleFormatter]
 format=%(asctime)s %(name)-12s %(levelname)-8s %(message)s
